unpackaged/main/default/objects/QHSE_Inspection_Line__c/QHSE_Inspection_Line__c.object-meta.xml
<CustomObject>
    <label>QHSE Inspection Line</label>
    <nameField>
        <displayFormat>InspectionLine{00000}</displayFormat>
        <label>QHSE Inspection Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QHSE Inspection Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>