unpackaged/main/default/objects/QHSE_Inspection_Line__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description/وصف الملاحظة</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Requirement__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Damage to the internal structure of the bus</fullName>
                <label>تلف في الهيكل الداخلي للحافلة</label>
            </value>
            <value>
                <fullName>Damage to the bus&#39;s exterior</fullName>
            </value>
            <value>
                <fullName>Damage to window tinting (hidden)</fullName>
            </value>
            <value>
                <fullName>Damage to the windshield wipers</fullName>
            </value>
            <value>
                <fullName>There is no rearview mirror on the bus</fullName>
            </value>
            <value>
                <fullName>Damage and malfunction of the passenger door</fullName>
            </value>
            <value>
                <fullName>There are uncovered electrical connections</fullName>
            </value>
            <value>
                <fullName>Failure to remove old warning lights</fullName>
            </value>
            <value>
                <fullName>The bus plate is not clear</fullName>
            </value>
            <value>
                <fullName>Damage to the bus free plate base</fullName>
            </value>
            <value>
                <fullName>Fracture of the lateral femur</fullName>
            </value>
            <value>
                <fullName>Do not install a trash can</fullName>
            </value>
            <value>
                <fullName>Lack of window opening handles</fullName>
            </value>
            <value>
                <fullName>There is no barrier in front of the transfer seats</fullName>
            </value>
            <value>
                <fullName>The presence of writing and drawings on the internal structure of the bus</fullName>
            </value>
            <value>
                <fullName>The &quot;stop&quot; lever does not work</fullName>
            </value>
            <value>
                <fullName>There are no shelves for students&#39; bags</fullName>
            </value>
            <value>
                <fullName>Broken bus glass</fullName>
            </value>
            <value>
                <fullName>There is rust and cracks on the exterior of the bus</fullName>
            </value>
            <value>
                <fullName>Presence following an accident (bus exterior structure)</fullName>
            </value>
            <value>
                <fullName>The seat belt is damaged and not working properly</fullName>
            </value>
            <value>
                <fullName>Damage to the safety packages and the presence of sharp parts as a result of the protection cover being shattered or broken</fullName>
            </value>
            <value>
                <fullName>The presence of sharp parts in the internal structure of the bus</fullName>
            </value>
            <value>
                <fullName>Damage to the stairs&#39; anti-slip</fullName>
            </value>
            <value>
                <fullName>The seat belt is two-point and contravenes legislative requirements</fullName>
            </value>
            <value>
                <fullName>The bus internal number (B00) on the bus body is not clear</fullName>
            </value>
            <value>
                <fullName>The absence of the bus internal number (B00) on the bus body</fullName>
            </value>
            <value>
                <fullName>The reference number (DOT) on the bus body is not clear</fullName>
            </value>
            <value>
                <fullName>Lack of a bus reference number (DOT) according to the legislation of the Integrated Transport Center</fullName>
            </value>
            <value>
                <fullName>Damage to the bus&#39;s exterior stickers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>