unpackaged/main/default/objects/QHSE_Inspection_Line__c/fields/ET_Vehicle_Master__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bus Info/حافلة</label>
    <referenceTo>Vehicle_Master__c</referenceTo>
    <relationshipLabel>QHSE Inspection Lines</relationshipLabel>
    <relationshipName>QHSE_Inspection_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>