unpackaged/main/default/objects/QHSE_Inspection_Line__c/fields/Proof__c.field-meta.xml
<CustomField>
    <fullName>Proof__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proof/الدليل</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>