unpackaged/main/default/objects/QHSE_Inspection_Line__c/fields/QHSE_Inspection__c.field-meta.xml
<CustomField>
    <fullName>QHSE_Inspection__c</fullName>
    <label>QHSE Inspection</label>
    <referenceTo>QHSE_Inspection__c</referenceTo>
    <relationshipLabel>QHSE Inspection Lines</relationshipLabel>
    <relationshipName>QHSE_Inspection_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>