unpackaged/main/default/objects/QHSE_Inspection_Line__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Root Cause/السبب الجذري</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>