unpackaged/main/default/objects/QHSE_Inspection_Line__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Severity</description>
    <label>Severity/الشدة</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Description__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Catastrophic</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Insignificant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>