unpackaged/main/default/objects/QHSE_Inspection_Line__c/fields/Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Target Date/التاريخ المستهدف</label>
    <type>Date</type>
</CustomField>