unpackaged/main/default/objects/QHSE_Inspection_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ET_Vehicle_Master__c</columns>
    <columns>Classification__c</columns>
    <columns>Corrective_Action__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>